# idfp

./: .gitignore  README.md  config.example.toml  pyproject.toml
idfp/: config.py  db.py  definitions.py  main.py  models.py
idfp/importers/: __init__.py  area.py  base.py
idfp/templates/: index.html  sources.j2  sql.j2
idfp/web/: __init__.py  gunicorn.py  views.py
migrations/: up.sql
